<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beesham.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Team A"
                android:textSize="14sp"
                android:textColor="@color/grey_700"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp">

                <TextView
                    android:id="@+id/games_wonA_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_won"
                    android:paddingRight="12dp"/>


                <TextView
                    android:id="@+id/games_wonA_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/games_wonA_textview"
                    android:fontFamily="sans-serif-medium"
                    android:text="0"/>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/won_game"
                android:onClick="wonGameA"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_point"
                android:textAllCaps="true"
                android:onClick="onePointsA"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Team B"
                android:textSize="14sp"
                android:textColor="@color/grey_700"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:padding="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp">

                <TextView
                    android:id="@+id/games_wonB_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_won"
                    android:paddingRight="12dp"/>


                <TextView
                    android:id="@+id/games_wonB_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/games_wonB_textview"
                    android:fontFamily="sans-serif-medium"
                    android:text="0"/>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/won_game"
                android:onClick="wonGameB"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_point"
                android:textAllCaps="true"
                android:onClick="onePointsB"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_scores_button"
        android:layout_above="@+id/reset_all_button"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_scores"
        android:textAllCaps="true"
        android:onClick="resetScores"/>

    <Button
        android:id="@+id/reset_all_button"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_all"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:onClick="resetAll"/>

</RelativeLayout>
